--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,9 @@
       "ignoreUrls": true,
       "ignoreComments": false
     }],
-    
+    "prefer-arrow-callback": ["off"],
+    "no-param-reassign": ["error", { "props": false }],
+//    "camelcase": ["error", { "properties": "never" }],
     "import/no-unresolved": [0]
   }
 }
