--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
       "ignoreComments": false
     }],
     "prefer-arrow-callback": ["off"],
-    "no-param-reassign": ["error", { "props": false }],
+    "no-param-reassign": ["off"],
     "spaced-comment": ["off"],
     "curly": ["error", "multi-or-nest"],
     "no-restricted-syntax": ["off"],
